Fixed jumbotron to occupy the page vertically and aligned everything.

--- a/main.css
+++ b/main.css
@@ -3,6 +3,14 @@ body
     background-color: #ffffff;
 }
 
+.jumbotron
+{
+    height: 100vh;
+
+    display: flex;
+    align-items: center;
+}
+
 #mainNavbar
 {
     font-size: 1.5rem;
